--- a/styles/style.scss
+++ b/styles/style.scss
@@ -38,7 +38,7 @@ main{
     section.backImage{
         min-height: 80vh;
         width: 90vw;
-        background-image: url(pictures/homepage/welcome.svg);
+        background-image: url(../pictures/homepage/welcome.svg);
         background-size: cover;
         background-position: center;
         margin: 0 auto;
